--- a/galaxy_game/Gemfile
+++ b/galaxy_game/Gemfile
@@ -51,6 +51,7 @@ gem "bootsnap", require: false
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "rails-controller-testing"
+  gem 'factory_bot_rails'
   gem "debug", platforms: %i[ mri mingw x64_mingw ]
 end
 
@@ -69,4 +70,5 @@ group :test do
   gem 'rspec-rails'
   gem "capybara"
   gem "selenium-webdriver"
+  gem 'shoulda-matchers', '~> 5.0'
 end
