--- a/galaxy_game/config/raw_materials/materials.yml
+++ b/galaxy_game/config/raw_materials/materials.yml
@@ -10,6 +10,7 @@ materials:
     freezing_point: 0.0 # Celsius
     vapor_point: 100.0 # Celsius
     melting_point: 0.0 # Celsius
+    molar_mass: 18.01528 # g/mol
 
   - name: "Carbon Dioxide"
     chemical_formula: "CO2"
@@ -18,6 +19,7 @@ materials:
     freezing_point: -56.6 # Celsius
     vapor_point: -78.5 # Celsius
     melting_point: -56.6 # Celsius
+    molar_mass: 44.01 # g/mol
 
   - name: "Nitrogen"
     chemical_formula: "N2"
@@ -26,6 +28,7 @@ materials:
     freezing_point: -210.0 # Celsius
     vapor_point: -195.8 # Celsius
     melting_point: -210.0 # Celsius
+    molar_mass: 28.0134 # g/mol
 
   - name: "Oxygen"
     chemical_formula: "O2"
@@ -34,6 +37,7 @@ materials:
     freezing_point: -218.8 # Celsius
     vapor_point: -183.0 # Celsius
     melting_point: -218.8 # Celsius
+    molar_mass: 32.00 # g/mol
 
   - name: "Methane"
     chemical_formula: "CH4"
@@ -42,6 +46,7 @@ materials:
     freezing_point: -182.5 # Celsius
     vapor_point: -161.5 # Celsius
     melting_point: -182.5 # Celsius
+    molar_mass: 16.04 # g/mol
 
   - name: "Hydrogen"
     chemical_formula: "H2"
@@ -50,6 +55,7 @@ materials:
     freezing_point: -259.2 # Celsius
     vapor_point: -252.9 # Celsius
     melting_point: -259.2 # Celsius
+    molar_mass: 2.016 # g/mol
 
   - name: "Helium"
     chemical_formula: "He"
@@ -58,6 +64,7 @@ materials:
     freezing_point: -272.2 # Celsius
     vapor_point: -268.9 # Celsius
     melting_point: -272.2 # Celsius
+    molar_mass: 4.002602 # g/mol
 
   - name: "Sulfur Dioxide"
     chemical_formula: "SO2"
@@ -66,6 +73,7 @@ materials:
     freezing_point: -72.7 # Celsius
     vapor_point: -10.0 # Celsius
     melting_point: -72.7 # Celsius
+    molar_mass: 64.066 # g/mol
 
   - name: "Ammonia"
     chemical_formula: "NH3"
@@ -74,6 +82,7 @@ materials:
     freezing_point: -77.7 # Celsius
     vapor_point: -33.3 # Celsius
     melting_point: -77.7 # Celsius
+    molar_mass: 17.031 # g/mol
 
   - name: "Argon"
     chemical_formula: "Ar"
@@ -82,6 +91,7 @@ materials:
     freezing_point: -189.3 # Celsius
     vapor_point: -185.8 # Celsius
     melting_point: -189.3 # Celsius
+    molar_mass: 39.948 # g/mol
 
   - name: "Neon"
     chemical_formula: "Ne"
@@ -90,6 +100,7 @@ materials:
     freezing_point: -248.6 # Celsius
     vapor_point: -246.0 # Celsius
     melting_point: -248.6 # Celsius
+    molar_mass: 20.1797 # g/mol
 
   - name: "Carbon Monoxide"
     chemical_formula: "CO"
@@ -98,6 +109,7 @@ materials:
     freezing_point: -205.0 # Celsius
     vapor_point: -191.5 # Celsius
     melting_point: -205.0 # Celsius
+    molar_mass: 28.01 # g/mol
 
   - name: "Hydrogen Sulfide"
     chemical_formula: "H2S"
@@ -106,6 +118,7 @@ materials:
     freezing_point: -85.5 # Celsius
     vapor_point: -60.3 # Celsius
     melting_point: -85.5 # Celsius
+    molar_mass: 34.08 # g/mol
 
   - name: "Sulfuric Acid"
     chemical_formula: "H2SO4"
@@ -114,6 +127,7 @@ materials:
     freezing_point: 10.0 # Celsius
     vapor_point: 337.0 # Celsius
     melting_point: 10.0 # Celsius
+    molar_mass: 98.079 # g/mol
 
   - name: "Sulfur Hexafluoride"
     chemical_formula: "SF6"
@@ -122,6 +136,7 @@ materials:
     freezing_point: -50.8 # Celsius
     vapor_point: -64.0 # Celsius
     melting_point: -50.8 # Celsius
+    molar_mass: 146.06 # g/mol
 
   - name: "Nitrous Oxide"
     chemical_formula: "N2O"
@@ -130,6 +145,7 @@ materials:
     freezing_point: -90.8 # Celsius
     vapor_point: -88.5 # Celsius
     melting_point: -90.8 # Celsius
+    molar_mass: 44.013 # g/mol
 
   - name: "Ozone"
     chemical_formula: "O3"
@@ -138,6 +154,7 @@ materials:
     freezing_point: -192.2 # Celsius
     vapor_point: -112.0 # Celsius
     melting_point: -192.2 # Celsius
+    molar_mass: 48.00 # g/mol
 
   - name: "Acetylene"
     chemical_formula: "C2H2"
@@ -146,6 +163,7 @@ materials:
     freezing_point: -80.8 # Celsius
     vapor_point: -84.0 # Celsius
     melting_point: -80.8 # Celsius
+    molar_mass: 26.04 # g/mol
 
   - name: "Ethanol"
     chemical_formula: "C2H5OH"
@@ -154,6 +172,7 @@ materials:
     freezing_point: -114.1 # Celsius
     vapor_point: 78.37 # Celsius
     melting_point: -114.1 # Celsius
+    molar_mass: 46.07 # g/mol
 
   - name: "Mercury"
     chemical_formula: "Hg"
@@ -162,6 +181,7 @@ materials:
     freezing_point: -38.83 # Celsius
     vapor_point: 356.73 # Celsius
     melting_point: -38.83 # Celsius
+    molar_mass: 200.59 # g/mol
 
   - name: "Glycerol"
     chemical_formula: "C3H8O3"
@@ -170,6 +190,7 @@ materials:
     freezing_point: 18.2 # Celsius
     vapor_point: 290.0 # Celsius
     melting_point: 18.2 # Celsius
+    molar_mass: 92.09 # g/mol
 
   - name: "Sodium Bicarbonate"
     chemical_formula: "NaHCO3"
@@ -178,6 +199,7 @@ materials:
     freezing_point: 50.0 # Celsius (decomposes)
     vapor_point: 1000.0 # Celsius
     melting_point: 50.0 # Celsius (decomposes)
+    molar_mass: 84.01 # g/mol
 
   - name: "Calcium Sulfate"
     chemical_formula: "CaSO4"
@@ -186,6 +208,7 @@ materials:
     freezing_point: 1450.0 # Celsius (decomposes)
     vapor_point: 1460.0 # Celsius
     melting_point: 1450.0 # Celsius (decomposes)
+    molar_mass: 136.14 # g/mol
 
   - name: "Graphite"
     chemical_formula: "C"
@@ -194,6 +217,7 @@ materials:
     freezing_point: 3652.0 # Celsius
     vapor_point: 4200.0 # Celsius
     melting_point: 3652.0 # Celsius
+    molar_mass: 12.01 # g/mol
 
   - name: "Diamond"
     chemical_formula: "C"
@@ -202,6 +226,7 @@ materials:
     freezing_point: 3550.0 # Celsius
     vapor_point: N/A # Celsius
     melting_point: 3550.0 # Celsius
+    molar_mass: 12.01 # g/mol
 
   - name: "Silicon"
     chemical_formula: "Si"
@@ -210,6 +235,7 @@ materials:
     freezing_point: 1414.0 # Celsius
     vapor_point: 2900.0 # Celsius
     melting_point: 1414.0 # Celsius
+    molar_mass: 28.085 # g/mol
 
   - name: "Sodium Phosphate"
     chemical_formula: "Na3PO4"
@@ -218,3 +244,4 @@ materials:
     freezing_point: 1583.0 # Celsius (decomposes)
     vapor_point: 1600.0 # Celsius
     melting_point: 1583.0 # Celsius (decomposes)
+    molar_mass: 163.94 # g/mol
