--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   redis:
     image: redis:alpine
-    container_name: mfcs_redis
+    container_name: redis
     command: redis-server 
     volumes:
       - redis:/var/lib/redis/data
@@ -21,14 +21,14 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
-  # sidekiq:
-  #   build: .
-  #   container_name: sidekiq
-  #   command: bundle exec sidekiq -C config/sidekiq.yml
-  #   restart: unless-stopped 
-  #   environment:
-  #     DATABASE_URL: postgres://postgres:password@db:5432/galaxy_game_development
-  #     REDIS_URL: redis://redis:6379/1      
+  sidekiq:
+    build: .
+    container_name: sidekiq
+    command: bundle exec sidekiq -C config/sidekiq.yml
+    restart: unless-stopped 
+    environment:
+      DATABASE_URL: postgres://postgres:password@db:5432/galaxy_game_development
+      REDIS_URL: redis://redis:6379/1      
    
   web:
     build: .
