--- a/galaxy_game/Gemfile
+++ b/galaxy_game/Gemfile
@@ -1,7 +1,7 @@
 source "https://rubygems.org"
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby "3.3.5"
+ruby "3.4.3"
 
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem "rails", "~> 7.0.8", ">= 7.0.8.4"
@@ -13,7 +13,7 @@ gem "sprockets-rails"
 gem "pg", "~> 1.1"
 
 # Use the Puma web server [https://github.com/puma/puma]
-gem "puma", "~> 5.0"
+gem 'puma', '~> 6.4.0'
 
 # Use JavaScript with ESM import maps [https://github.com/rails/importmap-rails]
 gem "importmap-rails"
@@ -42,24 +42,50 @@ gem "tzinfo-data", platforms: %i[ mingw mswin x64_mingw jruby ]
 # Reduces boot times through caching; required in config/boot.rb
 gem "bootsnap", require: false
 
+# lock concurrent-ruby to 1.3.4
+gem 'concurrent-ruby', '1.3.4'
+
 # Use Sass to process CSS
 # gem "sassc-rails"
 
 # Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
 # gem "image_processing", "~> 1.2"
 
-# Add Gems that will not be in the standard libary with Ruby 3.4.0
+# Add Gems that will not be in the standard library with Ruby 3.4.0
 # =================================================================
-gem "bigdecimal"
-gem "mutex_m"
-gem "ostruct"
+gem "bigdecimal"  # Already added
+gem "mutex_m"     # Already added
+gem "ostruct"     # Already added
+gem "drb"         # Already added
+gem "benchmark"   # Add for benchmark warnings
+gem "csv"         # Add if you use CSV
+gem "fileutils"   # Add if you use FileUtils
+gem "json"        # Add if you parse JSON
+gem "net-http"    # Add if you make HTTP requests
+gem "uri"         # Add if you parse URIs
 
 # Application Specific
 # =================================================================
 
 # background jobs
-gem 'sidekiq', '~> 6.1', '>= 6.1.3'
+# =====================================================
+# sidekiq 7 is not compatible with rails 5.2
+gem 'sidekiq'
+gem "sidekiq-cron"
 gem 'sidekiq-failures'
+gem 'whenever', require: false
+
+# data harvesting
+# =====================================================
+gem 'hpricot'
+gem 'htmlentities'
+gem 'wikipedia'
+gem 'wikipedia-client'
+
+# suggested by copilot
+# gem 'psych', '~> 5.1'
+# gem 'parser'
+# gem 'ast'
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
@@ -85,5 +111,5 @@ group :test do
   gem "capybara"
   gem "selenium-webdriver"
   gem 'shoulda-matchers', '~> 5.0'
-  gem 'database_cleaner-active_record'
+  gem 'database_cleaner'
 end
