fix: Enable scrolling on celestial body edit page and style Civ4 import section
- Add overflow-y: auto to body element to allow page scrolling
- Add #contentPanel styles with overflow-y: auto for internal scrolling
- Add .import-section styles for proper Civ4 import form visibility
- Fix docker-compose tmp volume specification as named volume

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,10 +11,13 @@ services:
       - ./scripts:/home/galaxy_game/scripts
       - ./galaxy_game:/home/galaxy_game
       - ./data/json-data:/home/galaxy_game/app/data
+      - "./data/freeCiv Maps:/home/galaxy_game/freeCiv_maps"
+      - ./data/tilesets:/home/galaxy_game/tilesets
+      - ./data/topology\ maps:/home/galaxy_game/topology_maps
       - ./data/bundle:/usr/local/bundle # cache bundle install
-      - ./data/node_modules:/home/hydra/node_modules # Assuming you might have Node.js assets
+      - ./data/node_modules:/home/galaxy_game/node_modules # Assuming you might have Node.js assets
       - ./data/logs:/home/galaxy_game/log
-      - /home/hydra/tmp
+      - tmp:/home/galaxy_game/tmp
     depends_on:
       redis:
         condition: service_started
@@ -75,3 +78,4 @@ services:
 volumes:
   redis_data:
   postgres_data:
+  tmp:
