--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,8 +11,9 @@ services:
       - ./scripts:/home/galaxy_game/scripts
       - ./galaxy_game:/home/galaxy_game
       - ./data/json-data:/home/galaxy_game/app/data
-      - ./data/maps:/home/galaxy_game/app/data/maps
+      - ./data/maps:/home/galaxy_game/app/data/maps      
       - ./data/tilesets:/home/galaxy_game/app/data/tilesets
+      - ./data/geotiff:/home/galaxy_game/app/data/geotiff      
       - ./data/bundle:/usr/local/bundle # cache bundle install
       - ./data/node_modules:/home/galaxy_game/node_modules # Assuming you might have Node.js assets
       - ./data/logs:/home/galaxy_game/log
