updated and renamed the playbook it should work for anyone llm or human. updated gitignore to insure files don't get added incorrectly to git.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,29 @@
 .DS_Store
 
-# Backup files
+# Backup and temporary working files
+*.new
+*.new*
+*.tmp
+*.temp
+*.working
+*.wip
+*.draft
+*.test
+*.experimental
 *.old
-*.old2
+*.old*
 *.bak
 *.backup
+
+# Large files that shouldn't be versioned
+*.zip
+*.tar.gz
+*.log
+rspec_results.txt
+
+# Test output and logs
+log/*.log
+tmp/
 
 # Exclude root-level data directory (production/development data)
 /data/
