feat: Implement comprehensive AI Station Construction Strategy with cost-benefit analysis
- Add AIManager::StationConstructionStrategy service (1104 lines)
  * Resource analysis for asteroids, moons, and planets
  * Strategic requirements evaluation
  * Construction option generation (full stations, asteroid conversion, lunar, orbital)
  * Implementation planning and risk assessment

- Add AIManager::StationCostBenefitAnalyzer service (632 lines)
  * Financial analysis (NPV, ROI, break-even)
  * Operational benefits and capability fulfillment
  * Risk-adjusted metrics and strategic alignment
  * Composite scoring with weighted factors

- Enhance AIManager::ExpansionService with station construction integration
- Add comprehensive RSpec test suites (58 examples each)
- Update Docker configuration and database setup for testing
- All tests passing with full functionality verified

--- a/galaxy_game/config/database.yml
+++ b/galaxy_game/config/database.yml
@@ -7,7 +7,7 @@ default: &default
 development:
   <<: *default
   database: galaxy_game_development
-  host: db
+  host: localhost
   username: postgres
   password: password
 
@@ -16,7 +16,7 @@ development:
 test:
   <<: *default
   database: galaxy_game_test
-  host: db
+  host: localhost
   username: postgres
   password: password
 
