--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -42,6 +42,8 @@ services:
     image: redis:alpine
     container_name: redis
     command: redis-server
+    ports:
+      - "6379:6379"
     volumes:
       - redis_data:/var/lib/redis/data
     restart: unless-stopped
@@ -60,6 +62,8 @@ services:
       POSTGRES_PASSWORD: password # Keep this here as well for simplicity
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "pg_isready", "-d", "postgres", "-U", "postgres"]
